fixed tests with no wrap

--- a/test/expected/topcoat-button-bar-mobile-light.css
+++ b/test/expected/topcoat-button-bar-mobile-light.css
@@ -168,7 +168,7 @@
 .topcoat-button-bar {
   display: table;
   table-layout: fixed;
-  white-space: no-wrap;
+  white-space: nowrap;
   margin: 0;
   padding: 0;
 }
